--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit==1.32.2
-pandas==2.1.4
+streamlit
+pandas
 numpy==1.26.4
-scikit-learn==1.4.2
+scikit-learn
 xgboost==2.0.3
-joblib==1.3.2
-matplotlib==3.8.2
-seaborn==0.13.2
+joblib
